<package>
  <name>key_mod</name>
  <version>0.0.1</version>
  <description>
    C++ driver library for Kobuki: mod for KeyCart
    Pure C++ driver library for Kobuki. This is for those who do not wish to use ROS on their systems.
  </description>
  <author email="soliva@seaos.co.jp">John Paul Soliva</author>
  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="bugtracker"></url>
  <url type="repository"></url>
  <url type="website"></url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ecl_build</build_depend>
  <build_depend>ecl_mobile_robot</build_depend>
  <build_depend>ecl_converters</build_depend>
  <build_depend>ecl_devices</build_depend>
  <build_depend>ecl_geometry</build_depend>
  <build_depend>ecl_sigslots</build_depend>
  <build_depend>ecl_time</build_depend>
  <build_depend>ecl_command_line</build_depend>
  <run_depend>ecl_mobile_robot</run_depend>
  <run_depend>ecl_converters</run_depend>
  <run_depend>ecl_devices</run_depend>
  <run_depend>ecl_geometry</run_depend>
  <run_depend>ecl_sigslots</run_depend>
  <run_depend>ecl_time</run_depend>
  <run_depend>ecl_command_line</run_depend>
</package>
